2005-09-08  Stipe Tolj  <stolj@wapme-group.de>
   * gw/wml_compiler.c: source styling, no logic change.
   * configure[.in]: changed required version of libxml2 to 2.6.0 due to
     applied Paul's patch to gw/wml_compiler.c. Solves compiler warnings
     and errors. Fixing build bug reported by Jarrod Hermer <jarrod@mybeat.net>.
     [Msg-Id: <20050908093728.B109C5A44@ctb-mesg1.saix.net>]
    
2005-09-02  Alexander Malysh <amalysh at kannel.org>
   * gw/smsc/smpp_pdu.c: fixed length for the NULterminated TLV.

2005-09-01  Alexander Malysh <amalysh at kannel.org>
   * gw/wap-appl.c: fixed compiler warning.
   * gw/wml_compiler.c: added 'libxml/parser.h' to includes because it cause build to fail.

2005-08-20 Andreas Fink <andreas@fink.org>
   * gwlib/soket.h fixed socklen_t double definition on MacOS X 10.4
   * configure.in fixed incorrect brackets

2005-08-12  Alexander Malysh <amalysh at kannel.org>
   * gw/smsc/smsc_smpp.c: fixed bug #242 that case statement because of missing break for requeue
     action triggered error condition. Thanks to srivest for report.

2005-08-12  Alexander Malysh <amalysh at kannel.org>
   * gw/wap-appl.c, gw/wml_compiler.c: applied charset-NG patch that generalize charset handling
     in the WAP stack. Thanks to Paul P Komkoff.
     [Msg-Id: <20050602143346.GA28202@stingr.stingr.net>]

2005-07-26 Aarno Syvanen <as@gni.ch>
   * doc/userguide/userguide.xml: Removed a duplicate

2005-06-10  Andreas Fink <andreas@fink.org>
   * gwlib/gw_uuid.h: uuid_t doesnt need to be defined on MacOS X. New compiler dislikes it
     configure, configure.in: Build changes to correctly build on XCode 2.1
     including dual build for ppc and i386 architecture if possible

2005-06-02  Stipe Tolj  <stolj@wapme.de>
    * gwlib/http.c, gwlib/fdset.c: some code styling within handle_transaction 
      and poller. No logic change.

2005-05-28  Alexander Malysh <amalysh at kannel.org>